For Android Devices And Laptops.

--- a/Android TV Web Launcher index.html
+++ b/Android TV Web Launcher index.html
@@ -1,2 +1,12 @@
-{"name":"Android TV Web Launcher – index.html","type":"code/html","content":"<!doctype html>\n<html lang="en">\n<head>\n  <meta charset="utf-8" />\n  <meta name="viewport" content="width=device-width, initial-scale=1" />\n  <
-
+tv-launcher/
+ ├── app/
+ │    ├── src/
+ │    │    ├── main/
+ │    │    │    ├── AndroidManifest.xml
+ │    │    │    ├── java/com/example/tvlauncher/MainActivity.kt
+ │    │    │    ├── java/com/example/tvlauncher/AppAdapter.kt
+ │    │    │    ├── java/com/example/tvlauncher/AppInfo.kt
+ │    │    │    └── res/layout/ (optional if you want XML layouts)
+ ├── build.gradle
+ ├── settings.gradle
+ └── README.md
